# cuda_convolution_test

./: .gitignore  README.md  README_old.md
GEMM/: CMakeLists.txt
conv_cudnn/: CMakeLists.txt  Makefile  compile.sh  conv_cudnn  conv_cudnn.cu  conv_cudnn_55  conv_cudnn_55.cu  conv_cudnn_test
conv_cudnn/cudnn_build/: CMakeCache.txt  Makefile  cmake_install.cmake
direct/: CMakeLists.txt  Makefile  compileCPU_ug.sh  compilecpu.sh  compilecuda.sh  conv_comb_overhang_hwc  conv_comb_overhang_hwc.cu  conv_cpu.cu  conv_cpu_test  conv_cuda_cmem  conv_cuda_cmem.cu  conv_cuda_combine_2d.cu  conv_cuda_final_55.cu  conv_cuda_naive  conv_cuda_naive.cu  conv_cuda_smem_combine  conv_cuda_smem_combine.cu  conv_cuda_smem_nopad  conv_cuda_smem_nopad.cu  conv_cuda_smem_reorder.cu  conv_reg_cmem_nopad  conv_reg_out  conv_smem_comb_further.cu  conv_smem_comb_overhang.cu  helpers.cpp  helpers.h
direct/cpu_build/: Makefile  cmake_install.cmake  conv_cpu_test
direct/old/: conv_cuda_combine_2d.cu  conv_cuda_final_55.cu
solution/: CMakeLists.txt  compileCPU.sh  compilecpu.sh  compilecuda.sh  conv_cpu.cpp  conv_cpu.cu  conv_cpu_test  conv_cuda_cmem  conv_cuda_cmem.cu  conv_cuda_cmem_pad  conv_cuda_combine_2d  conv_cuda_final_55  conv_cuda_naive  conv_cuda_naive.cu  conv_cuda_smem  conv_cuda_smem_combine.cu  conv_cuda_smem_in.cu  conv_cuda_smem_nopad.cu  conv_cuda_smem_out.cu  conv_cuda_smem_padded.cu  conv_cuda_smem_reorder  conv_cuda_smem_reorder.cu  conv_cuda_smem_reorder_55.cu  conv_reg_nopad  conv_reg_nopad.cu  conv_smem_comb_overhang  conv_smem_comb_overhang.cu  conv_smem_combine  conv_smem_nopad  conv_smem_padded  conv_smem_reorder  conv_smem_reorder_55  helpers.cu  helpers.h
solution/cpu_build/: CMakeCache.txt
